# PyDpapi

./: .gitignore  CMakeLists.txt  README.md  pydpapi.c  pydpapi.pyi  setup.py
tests/: test_pydpapi.py
